--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 	
 	<div class="facultet">
 	<span class="image-title">Стоматологічний факультет.</span>
-		<div class="image-content"><img src="images/stomat.png">Адреса: м. Ужгород, вул. Університетська, 6а<br>Тел.: (0312) 64-03-61 <br>E-mail: f-stomat@uzhnu.edu.ua </div>
+		<div class="image-content"><img src="images/stomat.jpg">Адреса: м. Ужгород, вул. Університетська, 6а<br>Тел.: (0312) 64-03-61 <br>E-mail: f-stomat@uzhnu.edu.ua </div>
 	</div>
 	<hr>	
 	
@@ -44,7 +44,7 @@ layout: default
 	
 	<div class="facultet">
 	<span class="image-title">Факультет здоров'я.</span>
-		<div class="image-content"><img src="images/helt.png">Адреса: м. Ужгород, вул. І.Франка, 1, Кімната №15.<br>Тел.: +38 (0312) 64-38-01 <br>E-mail: f-health@uzhnu.edu.ua</div>
+		<div class="image-content"><img src="images/helt.jpg">Адреса: м. Ужгород, вул. І.Франка, 1, Кімната №15.<br>Тел.: +38 (0312) 64-38-01 <br>E-mail: f-health@uzhnu.edu.ua</div>
 	</div>
 	
 	<hr>
