--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 	
 	<div class="facultet">
 	<span class="image-title">Стоматологічний факультет.</span>
-		<div class="image-content"><img src="images/stomat.jpg">Адреса: м. Ужгород, вул. Університетська, 6а<br>Тел.: (0312) 64-03-61 <br>E-mail: f-stomat@uzhnu.edu.ua </div>
+		<div class="image-content"><img src="images/stomat.jpg">Адреса: м. Ужгород, вул. Університетська, 6а<br>Тел.: (0312) 64-03-61 <br>E-mail: f-stomat@uzhnu.edu.ua</div>
 	</div>
 	<hr>	
 	
@@ -70,14 +70,14 @@ layout: default
 	
 	<hr>
 	
-	<div class="facultet">
+	<div class="facultet1">
 	<span class="image-title">Факультет післядипломної освіти та доуніверситетської підготовки. </span>
 		<div class="image-content"> <img src="images/pdo.jpg"> Адреса: м. Ужгород, вул. Собранецька, 148 <br>Тел.: +38 (0312) 64-22-29 <br>	E-mail: inst-podp@uzhnu.edu.ua </div>
 	</div>
 	
 	<hr>
 	
-	<div class="facultet">
+	<div class="facultet1">
 	<span class="image-title">Факультет міжнародної політики, менеджменту та бізнесу Юридичний факультет (корпус 2).</span>
 		<div class="image-content"><img src="images/mb.jpg">Адреса: м. Ужгород, вул. Заньковецької, 89 <br>Тел.: (0312) 65-14-34 <br>E-mail: f-mb@uzhnu.edu.ua </div>
 	</div>
